--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-main {
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  background: rgb(54, 10, 90);
+  color: #fff;
+}
+.todo-main h1 {
+  text-align: center;
+  margin-bottom: 6px;
+}
+.todo-main input[type="text"] {
+  border: none;
+  outline: none;
+  height: 45px;
+  width: 350px;
+  padding: 0px 10px;
+}
+.todo-main button[type="submit"] {
+  border: none;
+  outline: none;
+  height: 45px;
+  padding: 0px 15px;
+  background: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.todo-main ul {
+  list-style-type: none;
+  padding-inline-start: unset;
+  margin-top: 20px;
+}
+.todo-main ul li {
+  background: #fff;
+  color: #000;
+  width: 393px;
+  margin-bottom: 10px;
+  height: 40px;
+  line-height: 40px;
+  padding: 0 0 0 10px;
+  font-size: 14px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-main ul li button {
+  float: right;
+  border: none;
+  background: transparent;
+  padding: 12px;
+  color: #37175b;
+  font-weight: 700;
+  font-size: 16px;
+  border-left: 1px solid #37175b;
+}
+.deleteall {
+  border: none;
+  padding: 10px 14px;
+  box-shadow: 1px 1px 20px 0px #100f0f;
+  margin-top: 7px;
 }
